--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,6 +84,10 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "codecvt": "cpp",
+        "hash_map": "cpp",
+        "hash_set": "cpp",
+        "stack": "cpp"
     }
 }
