--- a/src/config/settings.json
+++ b/src/config/settings.json
@@ -32,16 +32,36 @@
   },
   "dictation_commands": {
     "supported_commands": [
-      { "phrase": "period", "action": "." },
+      { "phrase": "period", "action": ".", "aliases": ["full stop", "dot"] },
       { "phrase": "comma", "action": "," },
       { "phrase": "question mark", "action": "?" },
-      { "phrase": "exclamation point", "action": "!" },
+      { "phrase": "exclamation point", "action": "!", "aliases": ["exclamation mark"] },
       { "phrase": "new line", "action": "{ENTER}" },
       { "phrase": "new paragraph", "action": "{ENTER}{ENTER}" },
       { "phrase": "space", "action": " " },
       { "phrase": "control enter", "action": "{CTRL+ENTER}" },
-      { "phrase": "all caps", "action": "{CAPSLOCK}" },
-      { "phrase": "caps lock", "action": "{CAPSLOCK}" }
+      { "phrase": "all caps", "action": "{ALLCAPS_ON}" },
+      { "phrase": "no caps", "action": "{ALLCAPS_OFF}" },
+      { "phrase": "caps on", "action": "{CAPSLOCK}" },
+      { "phrase": "caps off", "action": "{CAPSLOCK}" },
+      { "phrase": "open parenthesis", "action": "(", "aliases": ["left parenthesis"] },
+      { "phrase": "close parenthesis", "action": ")", "aliases": ["right parenthesis"] },
+      { "phrase": "open bracket", "action": "[", "aliases": ["left bracket"] },
+      { "phrase": "close bracket", "action": "]", "aliases": ["right bracket"] },
+      { "phrase": "open brace", "action": "{", "aliases": ["left brace"] },
+      { "phrase": "close brace", "action": "}", "aliases": ["right brace"] },
+      { "phrase": "quote", "action": "\"", "aliases": ["double quote"] },
+      { "phrase": "single quote", "action": "'" },
+      { "phrase": "backslash", "action": "\\" },
+      { "phrase": "forward slash", "action": "/", "aliases": ["slash"] },
+      { "phrase": "delete", "action": "{DELETE}" },
+      { "phrase": "backspace", "action": "{BACKSPACE}" },
+      { "phrase": "underscore", "action": "_" },
+      { "phrase": "hyphen", "action": "-", "aliases": ["dash"] },
+      { "phrase": "plus", "action": "+", "aliases": ["plus sign"] },
+      { "phrase": "equals", "action": "=", "aliases": ["equal sign"] },
+      { "phrase": "at sign", "action": "@", "aliases": ["at"] },
+      { "phrase": "hash", "action": "#", "aliases": ["pound", "number sign"] }
     ],
     "capitalization_mode": "auto",
     "smart_punctuation": true,
